--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
-body{background:#020C19;
+body{background: #020C19;
     transition: 1s ease-out;
     transition-delay: 570ms;
     font-family: 'Josefin Sans''Architects Daughter', cursive;
-width:100vw;
+width:101vw;
+overflow-x:hidden;
+color:white;
+height:400vh;
 }
 /*-----------------BELOW IS PRELOADER-----------------*/
 
 .preloader{
+  z-index: 9999;
     position: fixed;
     width:100vw;
     height: 100vh;
@@ -14,14 +18,16 @@ width:100vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transform:scale(1.1);
 background: radial-gradient(circle, #020C19 100%,#040C1A 80%, #160B1E 60%, #2C0E29 40%,#400F2F 40%,#511036 48%,#3E0F2F 56%,#290E26 56%,#100C1D 8.32%,#020C17 8.32%);
+         /*to be removed*/
 }
 .preloadervideoblock{
     flex-shrink: 20%;
     transform: scale(1);
     padding-left:3vw;
 }
-.preloadervideo{
+.preloadervdo{
     filter: contrast(100%) brightness(100%) ;
 width:calc(23vw + 100px);
 clip-path: circle(30.0% at 50% 50%);
@@ -46,17 +52,152 @@ font-size: calc(10px + 2vh + 2vw);}
       background-position: 200% center;
     }
   }
-  .endpreloadynev{
-    /*transform:translateY(-1000px);*/
-    transform:translateY(300px);
-    transition: all ease-out 0.3s;
-}
-.endpreloadypos{
-    transform:translateY(-1000px);
-    transition: 0.7s;
-}
 .endpreloadopacity{
     opacity:0;
     transition:1s;
 }
+.nav_beforepreload{
+  display:none;
+}
+
   /*-----------------ABOVE WAS PRELOADER-------------------*/
+
+  /*-----------------Below Homepage Heading-----------------------*/
+
+.nav{
+  z-index: 1;
+  position:sticky;
+  top:0;
+  width:100vw;
+  margin-top: 1vh;
+  padding:calc(2px + 1vw);
+  padding-right:calc(5px + 3vw);
+  font: bolder calc(5px + 2vw);
+  display:relative;
+  text-align:right;
+  background: rgb(0,0,0);
+  width:99%;
+  box-sizing: border-box;
+background: linear-gradient(90deg, rgba(0,0,0,1) 29%, rgba(250,203,30,0.6842087176667542) 49%);
+}
+.nav *{
+  text-decoration: none;
+  color:#e0e0e0;
+  background: transparent;
+  font-size: calc(10px + 1vw);
+  padding:5px;
+  padding-right:12.5px;
+  padding-left:12.5px;
+  margin-left:5px;
+  margin-right:5px;
+  border-radius:10px;
+  letter-spacing: 1.2px;
+}
+.nav *:hover{
+background:rgb(255, 255, 255);
+color:#e6ba1ae0;
+transition:500ms;
+}
+.header{
+  float:left;
+  position: relative;
+  width:99vw;
+  height:75vh;
+  width:103%;
+  left:-2vh;
+  top:-2vh;
+  transform: scale(1);
+  box-shadow:8px 8px rgba(0, 0, 0, 0.24);
+  background: black;
+}
+
+.headervdocontainer{
+  z-index:-1;
+  background:black;
+  transform: scale(1);
+  float:left;
+  position:absolute;
+  top:0;
+  left:0;
+  width:103vw;
+  height:100%;
+  overflow:hidden;
+}
+.headervdo{
+  transform:scale(1.5);
+  opacity:0;
+}
+.headervdo_afterpreload{
+  transition: ease-in 5s;
+  opacity:100;
+}
+.logo{
+  z-index: 1;
+  padding:25px;
+  margin-left:calc(2vh + 5px);
+  background:url("logo.jpeg");
+  background-repeat: no-repeat;
+  float:top;
+  background-size: cover;
+  box-sizing: border-box;
+  position: fixed;
+  width:calc(50px + 3vw);
+  height:calc(50px + 3vw);
+  top:3%;
+  left:0;
+  transform: translate(-1vw,-2vh);
+  clip-path: circle(50.0% at 50% 50%);
+}
+.heading{
+  font-size: calc(1vh + 4vw);
+  font-family: 'Slabo 27px', serif;
+  position: absolute;
+  top:35%;
+  margin-left:17vw;
+  margin-right:17vw;
+  font-weight: 600;
+  letter-spacing: calc(1vh);
+  color:rgb(255, 255, 255);
+  opacity:100;
+  transform: scale(1.05);
+  text-align: center;
+  /* below shine */
+  background: rgb(213,213,213);
+background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 32%, rgba(0,0,0,1) 64%);
+ background-size: 200% auto;
+  
+  color: #160B1E;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+  animation:shine 4s linear infinite;
+}
+.tagline{
+  box-sizing: border-box;
+  font-size: calc(1vh + 5px + 2vw);
+  transform: scale(0.8);
+  font-family: 'Slabo 27px', serif;
+  position: absolute;
+  top:60%;
+  right:17vw;
+  margin-left:16vw;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 1vh;
+  color:rgb(255, 255, 255);
+  opacity:100;
+
+  /* shine
+  background: rgb(213,213,213);
+  background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 32%, rgba(0,0,0,1) 64%);
+   background-size: 200% auto;
+    
+    color: #160B1E;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+    animation:shine 4s linear infinite;  */
+    
+}
