--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ background: linear-gradient(90deg, rgba(22,11,30,1) 14%, rgba(81,16,54,1) 21%, r
 transform: translateY(2vh);
 font-size: calc(10px + 2vh + 2vw);}
   @keyframes shine {
-    to {
+    from {
       background-position: 200% center;
     }
   }
