--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
+*{box-sizing: border-box;
+}
 body{background: #020C19;
+  margin:0;
     transition: 1s ease-out;
     transition-delay: 570ms;
     font-family: 'Josefin Sans''Architects Daughter', cursive;
-width:101vw;
-overflow-x:hidden;
 color:white;
-height:400vh;
+width:100vw;
+overflow-x: hidden;
 }
 /*-----------------BELOW IS PRELOADER-----------------*/
 
 .preloader{
   z-index: 9999;
     position: fixed;
+    top:0;
+    left:0;
     width:100vw;
     height: 100vh;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    transform:scale(1.1);
 background: radial-gradient(circle, #020C19 100%,#040C1A 80%, #160B1E 60%, #2C0E29 40%,#400F2F 40%,#511036 48%,#3E0F2F 56%,#290E26 56%,#100C1D 8.32%,#020C17 8.32%);
          /*to be removed*/
 }
@@ -63,12 +66,19 @@ font-size: calc(10px + 2vh + 2vw);}
   /*-----------------ABOVE WAS PRELOADER-------------------*/
 
   /*-----------------Below Homepage Heading-----------------------*/
+.homepage{
+  display:grid;
+grid-template-columns: repeat(20,5vw);
+grid-template-rows: repeat(18,4vh);
+width:100%;
 
+overflow-x: hidden;
+}
 .nav{
   z-index: 1;
   position:sticky;
   top:0;
-  width:100vw;
+  width:100%;
   margin-top: 1vh;
   padding:calc(2px + 1vw);
   padding-right:calc(5px + 3vw);
@@ -100,23 +110,21 @@ transition:500ms;
 }
 .header{
   float:left;
+  grid-column-start: 1;
+  grid-column-end: 25;
+  grid-row-start:1;
+  grid-row-end:19;
+  width:100%;
   position: relative;
-  width:99vw;
-  height:75vh;
-  width:103%;
-  left:-2vh;
-  top:-2vh;
-  transform: scale(1);
-  box-shadow:8px 8px rgba(0, 0, 0, 0.24);
+  box-shadow:8px rgba(0, 0, 0, 0.24);
   background: black;
+  overflow:hidden;
 }
 
 .headervdocontainer{
-  z-index:-1;
+  z-index:0;
   background:black;
   transform: scale(1);
-  float:left;
-  position:absolute;
   top:0;
   left:0;
   width:103vw;
@@ -126,13 +134,14 @@ transition:500ms;
 .headervdo{
   transform:scale(1.5);
   opacity:0;
+
 }
 .headervdo_afterpreload{
   transition: ease-in 5s;
   opacity:100;
 }
 .logo{
-  z-index: 1;
+  z-index: 2;
   padding:25px;
   margin-left:calc(2vh + 5px);
   background:url("logo.jpeg");
@@ -171,7 +180,7 @@ background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 3
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   
-  animation:shine 4s linear infinite;
+  animation:shine 3s linear infinite;
 }
 .tagline{
   box-sizing: border-box;
@@ -187,17 +196,10 @@ background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 3
   letter-spacing: 1vh;
   color:rgb(255, 255, 255);
   opacity:100;
-
-  /* shine
-  background: rgb(213,213,213);
-  background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 32%, rgba(0,0,0,1) 64%);
-   background-size: 200% auto;
-    
-    color: #160B1E;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    
-    animation:shine 4s linear infinite;  */
-    
 }
+.midbody{
+  margin:4vh 3vw 4vh 3vw;
+  color:black;
+  border: red 2px solid;
+}
+
