--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 *{box-sizing: border-box;
 }
-body{background: #020C19;
+body{
   margin:0;
     transition: 1s ease-out;
     transition-delay: 570ms;
-    font-family: 'Josefin Sans''Architects Daughter', cursive;
+    font-family: 'Poiret One', 'Josefin Sans''Architects Daughter', cursive;
 color:white;
 width:100vw;
 overflow-x: hidden;
 height:200vh;
+background-color: #E9ECEF;
+
 }
 /*-----------------BELOW IS PRELOADER-----------------*/
 
@@ -66,13 +68,12 @@ font-size: calc(10px + 2vh + 2vw);}
 
   /*-----------------ABOVE WAS PRELOADER-------------------*/
 
-  /*-----------------Below Homepage Heading-----------------------*/
+  /*----------------------Header Below-----------------------*/
 .homepage{
   display:grid;
 grid-template-columns: repeat(20,5vw);
 grid-template-rows: repeat(18,4vh);
 width:100%;
-
 overflow-x: hidden;
 }
 .nav{
@@ -192,7 +193,7 @@ background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 3
   box-sizing: border-box;
   font-size: calc(1vh + 5px + 2vw);
   transform: scale(0.8);
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Poiret One','Slabo 27px', serif;
   position: absolute;
   top:60%;
   right:17vw;
@@ -203,96 +204,8 @@ background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 3
   color:rgb(255, 255, 255);
   opacity:100;
 }
-
-/*Mid_Body*/
-
-.midbody{
-  margin:4vh 3vw 4vh 3vw;
-  color:black;
-  border: red 2px solid;
-  display:grid;
-  grid-template-columns: repeat(33,3vw);
-  grid-template-rows: repeat(31,6vh);
-  overflow-x: hidden;
-}
-.quotegenerator{
-  border:1px solid red;
-  grid-column-start: 3;
-  grid-column-end: 30;
-  grid-row-start: 2;
-  grid-row-end: 6;
-  display:grid;
-  grid-template-columns: repeat(27,3vw);
-  grid-template-rows: repeat(12,2vh);
-}
-.quote{
-  grid-column-start: 3;
-  grid-column-end: 26;
-  grid-row-start:2;
-  grid-row-end:8;
-}
-.writer{
-  grid-column-start: 21;
-  grid-column-end: 28;
-  grid-row-start: 9;
-  grid-row-end:10;
-}
-.lineafterquote{
-grid-column-start: 4;
-grid-column-end: 29;
-grid-row-start: 7;
-grid-row-end: 7;
-width:100%;
-height:1px;
-background:rgb(207, 207, 207);
-}
-.compendium{
-  grid-column: 3/30;
-  grid-row: 8/15;
-  border:1px solid red;
-}
-.lineaftercompendium{
-  grid-column-start: 4;
-grid-column-end: 29;
-grid-row-start: 16;
-grid-row-end: 16;
-width:100%;
-height:1px;
-background:rgb(207, 207, 207);
-}
-.motive{
-  grid-column: 2/31;
-  grid-row: 17/24;
-  border:1px solid red;
-}
-.lineaftermotive{
-  grid-column-start: 4;
-  grid-column-end: 29;
-  grid-row-start: 25;
-  grid-row-end: 25;
-  width:100%;
-  height:1px;
-  background:rgb(207, 207, 207);
-}
-.whyus{
-  grid-column: 3/30;
-  grid-row: 26/31;
-  border:1px solid red;
-}
-.footer{
-  color:black;
-  border:1px solid  green;
-}
-.footer *{
-}
-.reachus{
-
-}
-.reachus h1{
-  text-align: center;
-}
+/*----------------------Header Up---------------------*/
 .social{
-
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -353,9 +266,163 @@ transform: scale(1.05);
   transform: scale(1.05);
   z-index: 2;
 }
+@media only screen and (max-width: 700px) {
+  .instagram , .youtube , .facebook , .linkedin{
+    filter:saturate(1);
+    background-size: 200%;
+  }
+}
+
+/*--------------------Mid_Body Below------------------*/
+
+.midbody{
+  font-family: 'Poiret One', cursive;
+  margin:4vh 3vw 4vh 3vw;
+  color:black;
+  display:grid;
+  grid-template-columns: repeat(33,3vw);
+  grid-template-rows: repeat(33,6vh);
+  
+}
+.quotegenerator{
+  color:black;
+  grid-column-start: 3;
+  grid-column-end: 30;
+  grid-row-start: 2;
+  grid-row-end: 6;
+  display:grid;
+  grid-template-columns: repeat(27,3vw);
+  grid-template-rows: repeat(12,2vh);
+  transform: scale(1.04);
+  text-align: center;
+  padding-top: 1vh;
+  padding:3px;
+  box-shadow: 3px 3px rgba(0, 0, 0, 0.267);
+font-family: 'Dancing Script', cursive;
+font-size: 24px;
+text-shadow:0.2px 0.2px rgba(0, 0, 0, 0.281);
+border-radius: 13px;
+color:#CED4DA;
+font-weight: 600;
+background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+}
+
 .quote{
-  transition: all 1s ease-in-out;
+  grid-column-start: 1;
+  grid-column-end: 28;
+  grid-row-start:3;
+  grid-row-end:8;
+  transition:1s ease-out all;
 }
 .writer{
-  transition:all 1s ease-in-out;
+  grid-column-start: 1;
+  grid-column-end: 28;
+  grid-row-start: 8;
+  grid-row-end:10;
+  text-align: center;
+  transition:1s ease-out all;
 }
+@media only screen and (max-width: 700px) {
+  .quotegenerator{
+    font-size: 17px;
+    text-shadow:0.2px 0.2px rgba(0, 0, 0, 0.281);
+  }
+  .writer{
+    grid-row-start: 9;
+  }
+}
+.lineafterquote{
+grid-column-start: 4;
+grid-column-end: 29;
+grid-row-start: 7;
+grid-row-end: 7;
+width:100%;
+height:1px;
+background:rgb(207, 207, 207);
+}
+.compendium{
+  color:white;
+  grid-column: 1/32;
+  transform: scale(1.04);
+  grid-row: 8/15;
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.315);
+  background-color: #4834d4;
+background-image: linear-gradient(315deg, #4834d4 -45%, #0c0c0c 60%);
+border-radius: 15px;
+text-shadow:0.5px 0.5px rgba(0, 0, 0, 0.281);
+/*background: linear-gradient(to bottom right, #013374 22%, #c70046 99%);*/
+
+padding:5px;
+}
+.compendium h1{
+  text-align: center;
+  margin-bottom: 3px;
+}
+.compendium h4{
+  text-align: center;
+}
+.lineaftercompendium{
+  grid-column-start: 4;
+grid-column-end: 29;
+grid-row-start: 16;
+grid-row-end: 16;
+width:100%;
+height:1px;
+background:rgb(207, 207, 207);
+}
+.motive{
+  grid-column: 1/32;
+  transform: scale(1.04);
+  grid-row: 17/25;
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.315);
+  background-color: #4834d4;
+  background-image: linear-gradient(315deg, #4834d4 -40%, #0c0c0c 64%);
+  border-radius: 15px;
+text-shadow:0.5px 0.5px rgba(0, 0, 0, 0.281);
+color:white;
+}
+.motive h1{
+  text-align: center;
+  margin-bottom: 3px;
+
+}
+.lineaftermotive{
+  grid-column-start: 4;
+  grid-column-end: 26;
+  grid-row-start: 26;
+  grid-row-end: 29;
+  width:100%;
+  height:1px;
+  background:rgb(207, 207, 207);
+}
+.whyus{
+  transform: scale(1.04);
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.315);
+  background-color: #4834d4;
+  background-image: linear-gradient(315deg, #4834d4 -40%, #0c0c0c 64%);
+  border-radius: 15px;
+text-shadow:0.5px 0.5px rgba(0, 0, 0, 0.281);
+color:white;
+  grid-column: 1/32;
+  grid-row: 27/33;
+}
+.whyus h1{
+  text-align: center;
+  margin-bottom: 3px;
+}
+
+
+/*-------------------Midbody Up-------------------*/
+/*------------------Footer Below------------------*/
+.footer{
+  color:black;
+  border:1px solid  green;
+}
+.footer *{
+}
+.gpsmap{
+  height:50vh;
+  width:100vh;
+  border:1px solid red;
+}
+
