--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -2,6 +2,25 @@ body {
   background-color: black;
 }
 
+.logo{
+  z-index: 5;
+  padding:25px;
+  margin-left:calc(2vh + 5px);
+  background:url("../logo.jpeg");
+  background-repeat: no-repeat;
+  float:top;
+  background-size: cover;
+  box-sizing: border-box;
+  position: fixed;
+  width:calc(50px + 3vw);
+  height:calc(50px + 3vw);
+  top:3%;
+  left:0;
+  transform: translate(-1vw,-2vh);
+  clip-path: circle(50.0% at 50% 50%);
+  cursor: pointer;
+}
+
 .navbar {
   transform: scale(1.01);
   background: transparent;
