--- a/style.css
+++ b/style.css
@@ -12,6 +12,23 @@ height:200vh;
 background-color: #E9ECEF;
 
 }
+
+:root{
+  --maincolor:#f9ca24;
+}
+
+html::-webkit-scrollbar{
+  width:1rem;
+}
+
+html::-webkit-scrollbar-track{
+  background:#080708;
+}
+
+html::-webkit-scrollbar-thumb{
+  background:var(--maincolor);
+}
+
 /*-----------------BELOW IS PRELOADER-----------------*/
 
 .preloader{
