custom scrollbar added

--- a/event/event_style.css
+++ b/event/event_style.css
@@ -12,6 +12,22 @@ height:200vh;
 background-color: #080708;
 }
 
+:root{
+  --maincolor:#f9ca24;
+}
+
+html::-webkit-scrollbar{
+  width:1rem;
+}
+
+html::-webkit-scrollbar-track{
+  background:#080708;
+}
+
+html::-webkit-scrollbar-thumb{
+  background:var(--maincolor);
+}
+
   /*----------------------Header Below-----------------------*/
 .homepage{
   display:grid;
