--- a/ourteam/style.css
+++ b/ourteam/style.css
@@ -31,6 +31,22 @@ body{
   /* 220e24  */
 }
 
+:root{
+  --maincolor:#f9ca24;
+}
+
+html::-webkit-scrollbar{
+  width:1rem;
+}
+
+html::-webkit-scrollbar-track{
+  background:#080708;
+}
+
+html::-webkit-scrollbar-thumb{
+  background:var(--maincolor);
+}
+
   /* navigation bar */
 
 .navbar{
