--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -101,3 +101,28 @@ img {
   border-radius: 50% ;
   transition: all 0.5s;
 }
+
+.footer{
+  background:#080708;
+  font-family: 'Josefin Slab', serif;
+}
+
+@media only screen and (max-width: 992px) {
+  .importantlinks{
+    display: flex !important;
+    flex-direction: column !important;
+  }
+}
+.importantlinks *{
+  font-family: 'Forum', cursive;
+  font-size: small;
+  color:rgba(133, 132, 132, 0.877);
+}
+.importantlinks a{
+  text-decoration:none;
+}
+.importantlinks a:hover{
+  text-decoration: underline;
+  color:rgba(190, 179, 179, 0.877);
+ 
+}
