--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -126,10 +126,8 @@ img {
     display: flex !important;
     flex-direction: column !important;
   }
-  .navbar{
-    display: flex !important;
-    flex-direction: column !important;
-  }
+  .navbar-nav{
+    background-color:black;
 }
 .importantlinks *{
   font-family: 'Forum', cursive;
