fuck this curly brackets

--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -129,6 +129,7 @@ img {
   .navbar-nav{
     background-color:black;
 }
+}
 .importantlinks *{
   font-family: 'Forum', cursive;
   font-size: small;
