--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+
 *{box-sizing: border-box;
-}
-body{*{box-sizing: border-box;
 }
 body{
   margin:0;
@@ -14,8 +14,8 @@ height:200vh;
 background-color: #E9ECEF;
 
 }
-  
- :root{
+
+:root{
   --maincolor:#f9ca24;
 }
 
@@ -30,6 +30,7 @@ html::-webkit-scrollbar-track{
 html::-webkit-scrollbar-thumb{
   background:var(--maincolor);
 }
+
 /*-----------------BELOW IS PRELOADER-----------------*/
 
 .preloader{
@@ -190,330 +191,7 @@ body{
   background: rgb(213,213,213);
 background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 32%, rgba(0,0,0,1) 64%);
  background-size: 200% auto;
-  
-  color: #160B1E;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  
-  animation:shine 3s linear infinite;
-}
-.tagline{
-  box-sizing: border-box;
-  font-size: calc(1vh + 5px + 2vw);
-  transform: scale(0.8);
-  font-family: 'Poiret One','Slabo 27px', serif;
-  position: absolute;
-  top:60%;
-  right:17vw;
-  margin-left:16vw;
-  text-align: center;
-  font-weight: 500;
-  letter-spacing: 1vh;
-  color:rgb(255, 255, 255);
-  opacity:100;
-}
-/*----------------------Header Up---------------------*/
-.social{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-.social *{
-flex:1;
-padding:15px;
-cursor:pointer;
-text-decoration: none;
-}
-.instagram{
-  background:url("https://sm.ign.com/ign_in/screenshot/default/ig-glyph001-74am_dp6a.jpg") no-repeat;
-  background-position: center;
-  background-size: cover;
-  filter:saturate(0);
-  transition: all ease-in 250ms;
-}
-.instagram:hover{
-  filter: saturate(1);
-  transform: scale(1.05);
-  z-index: 2;
-}
-.facebook{
-  background:url("fblogo.png") no-repeat;
-  background-position: center;
-  background-size:125%;
-  transition:ease-in-out all 250ms ;
-  filter:saturate(0);
-}
-.facebook:hover{
-  filter: saturate(1);
-  transform: scale(1.05);
-  z-index: 2;
-  filter:contrast(0.8);
-}
-.linkedin{
-background:url("linkedin.png") no-repeat;
-background-position: center;
-background-size:110%;
-transition:ease-in-out all 250ms ;
-filter:saturate(0);
-}
-.linkedin:hover{
-filter: saturate(1);
-transform: scale(1.05);
-  z-index: 2;
-}
-.youtube{
-  background:url("https://c4.wallpaperflare.com/wallpaper/377/439/784/red-white-logo-youtube-wallpaper-preview.jpg") no-repeat;
-  background-position: center;
-  background-size: cover;
-  filter:saturate(0);
-  transition: all 250ms ease-in;
-}
-.youtube:hover{
-  filter:saturate(1);
-  transform: scale(1.05);
-  z-index: 2;
-}
-@media only screen and (max-width: 700px) {
-  .instagram , .youtube , .facebook , .linkedin{
-    filter:saturate(1);
-    background-size: 200%;
-  }
-}
-
-/*--------------------Mid_Body Below------------------*/
-.borderup{
-  background: transparent;
-  padding: 10px;
-  border-radius: 25px;
-  border-bottom: 2px rgb(107, 107, 107) solid;
-  width: 63vw;
-  position: relative;
-  left: 17vw;
-}
-.borderdown{
-  background: transparent;
-  padding: 10px;
-  border-radius: 25px;
-  border-top: 2px rgb(92, 92, 92) solid;
-  width: 63vw;
-  position: relative;
-  left: 17vw;
-}
-.midbody{
-
-  background: #080708;
-  font-family: 'Josefin Slab', serif;
-  
-
-}
-.quotegenerator{
-  position: relative;
-  font-family:'Dancing Script';
-  letter-spacing: 0.2em;
-  
-}
-.quotegenerator *{
-  font-size: 1.1em;
-}
-.quote{
-  transition: 1s ease-in-out;
-}
-.writer{
-position: absolute;
-bottom: 0;
-right: 0;
-transition: 1s ease-in-out;
-}
-
-.card-img{
-opacity: 0.4;
-
-}
-.dream:hover, .create:hover, .inspire:hover{
-  transition: 200ms all ease-in-out;
-  transform: scale(1.02);
-}
-/*-------------------Midbody Up-------------------*/
-/*------------------Footer Below------------------*/
-.footer{
-  background:#080708;
-  font-family: 'Josefin Slab', serif;
-}
-
-  margin:0;
-    transition: 1s ease-out;
-    transition-delay: 570ms;
-    font-family: 'Poiret One', 'Josefin Sans''Architects Daughter', cursive;
-color:white;
-width: 100vw;
-overflow-x: hidden;
-height:200vh;
-background-color: #E9ECEF;
-
-}
-/*-----------------BELOW IS PRELOADER-----------------*/
-
-.preloader{
-  z-index: 9999;
-    position: fixed;
-    top:0;
-    left:0;
-    width:100vw;
-    height: 100vh;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-background: radial-gradient(circle, #020C19 100%,#040C1A 80%, #160B1E 60%, #2C0E29 40%,#400F2F 40%,#511036 48%,#3E0F2F 56%,#290E26 56%,#100C1D 8.32%,#020C17 8.32%);
-         /*to be removed*/
-}
-.preloadervideoblock{
-    flex-shrink: 20%;
-    transform: scale(1);
-    padding-left:3vw;
-}
-.preloadervdo{
-    filter: contrast(100%) brightness(100%) ;
-width:calc(23vw + 100px);
-clip-path: circle(30.0% at 50% 50%);
-}
-.preloadertext{
-text-align: center;
-padding-right:9px;
-background: rgb(22,11,30);
-background: linear-gradient(90deg, rgba(22,11,30,1) 14%, rgba(81,16,54,1) 21%, rgba(255,255,255,1) 49%, rgba(81,16,54,1) 76%, rgba(16,12,29,1) 85%);
-  background-size: 200% auto;
-  
-  color: #160B1E;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  
-  animation:shine 4s linear infinite;
-transform: translateY(2vh);
-font-size: calc(10px + 2vh + 2vw);}
-  @keyframes shine {
-    from {
-      background-position: 200% center;
-    }
-  }
-.endpreloadopacity{
-    opacity:0;
-    transition:1s;
-}
-.nav_beforepreload{
-  display:none;
-}
-
-  /*-----------------ABOVE WAS PRELOADER-------------------*/
-
-  /*----------------------Header Below-----------------------*/
-.homepage{
-  display:grid;
-grid-template-columns: repeat(20,5vw);
-grid-template-rows: repeat(18,4vh);
-width:100%;
-overflow-x: hidden;
-}
-.navi{
-  z-index: 4;
-}
-
-*{
-  box-sizing: border-box;
-}
-body{
-  margin:0;
-  padding:0;
-}
-.navbar{
-  transform: scale(1.01);
-  background: transparent;
-}
-.nav-link{
-  color:white !important;
-  border-radius: 9px;
-}
-.navbar-toggler{
-  background:white !important;
-}
-.active{
-  background: var(--bs-yellow);
-  color: black !important;
-}
-.nav-link:hover , .nav-link:focus, .nav-link:active{
-  background: var(--bs-yellow);
-  color: black !important;
-}
-.header{
-  float:left;
-  grid-column-start: 1;
-  grid-column-end: 25;
-  grid-row-start:1;
-  grid-row-end:25;
-  width:100%;
-  position: relative;
-  box-shadow:8px rgba(0, 0, 0, 0.24);
-  background: black;
-  overflow:hidden;
-}
-
-.headervdocontainer{
-  z-index:0;
-  background:black;
-  transform: scale(1);
-  top:0;
-  left:0;
-  width:103vw;
-  height:100%;
-  overflow:hidden;
-}
-.headervdo{
-  transform:scale(1.5);
-  opacity:0;
-
-}
-.headervdo_afterpreload{
-  transition: ease-in 5s;
-  opacity:100;
-}
-.logo{
-  z-index: 5;
-  padding:25px;
-  margin-left:calc(2vh + 5px);
-  background:url("logo.jpeg");
-  background-repeat: no-repeat;
-  float:top;
-  background-size: cover;
-  box-sizing: border-box;
-  position: fixed;
-  width:calc(50px + 3vw);
-  height:calc(50px + 3vw);
-  top:3%;
-  left:0;
-  transform: translate(-1vw,-2vh);
-  clip-path: circle(50.0% at 50% 50%);
-}
-.heading{
-  font-size: calc(1vh + 4vw);
-  font-family: 'Slabo 27px', serif;
-  position: absolute;
-  top:35%;
-  margin-left:17vw;
-  margin-right:17vw;
-  font-weight: 600;
-  letter-spacing: calc(1vh);
-  color:rgb(255, 255, 255);
-  opacity:100;
-  transform: scale(1.05);
-  text-align: center;
-  /* below shine */
-  background: rgb(213,213,213);
-background: radial-gradient(circle, rgba(213,213,213,1) 16%, rgba(255,201,0,1) 32%, rgba(0,0,0,1) 64%);
- background-size: 200% auto;
-  
+  font-family: 'PT Serif', serif;
   color: #160B1E;
   background-clip: text;
   -webkit-background-clip: text;
